# aboss_task

./: Cargo.toml  readme.md
programs/rust/h-projects/aboss-task/: readme.md
programs/rust/h-projects/aboss-task/src/: config.rs  lib.rs  main.rs  routes.rs  utils.rs
src/: data_processor.rs  dto.rs  models.rs  routes.rs  rpc_manager.rs
